; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/random/extr_randomize_fd.c_rand_node_free_rec.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/random/extr_randomize_fd.c_rand_node_free_rec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rand_node = type { %struct.rand_node* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rand_node*)* @rand_node_free_rec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rand_node_free_rec(%struct.rand_node* %0) #0 {
  %2 = alloca %struct.rand_node*, align 8
  store %struct.rand_node* %0, %struct.rand_node** %2, align 8
  %3 = load %struct.rand_node*, %struct.rand_node** %2, align 8
  %4 = icmp ne %struct.rand_node* %3, null
  br i1 %4, label %5, label %17

5:                                                ; preds = %1
  %6 = load %struct.rand_node*, %struct.rand_node** %2, align 8
  %7 = getelementptr inbounds %struct.rand_node, %struct.rand_node* %6, i32 0, i32 0
  %8 = load %struct.rand_node*, %struct.rand_node** %7, align 8
  %9 = icmp ne %struct.rand_node* %8, null
  br i1 %9, label %10, label %14

10:                                               ; preds = %5
  %11 = load %struct.rand_node*, %struct.rand_node** %2, align 8
  %12 = getelementptr inbounds %struct.rand_node, %struct.rand_node* %11, i32 0, i32 0
  %13 = load %struct.rand_node*, %struct.rand_node** %12, align 8
  call void @rand_node_free_rec(%struct.rand_node* %13)
  br label %14

14:                                               ; preds = %10, %5
  %15 = load %struct.rand_node*, %struct.rand_node** %2, align 8
  %16 = call i32 @rand_node_free(%struct.rand_node* %15)
  br label %17

17:                                               ; preds = %14, %1
  ret void
}

declare dso_local i32 @rand_node_free(%struct.rand_node*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
